welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (hour<7 || hour>20) return true}} 
    ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (talking){
  ^